# match

./: .gitignore  .gitmodules  Makefile  Makefile.match  README.md  __init__.py  gap9-relay-op.py  match.py  notes.md  pyproject.toml  requirements.txt  setup.py  sourceme.sh  system_requirements.txt
.github/workflows/: match-docker.yml  pulp-open-docker.yml  pulp-open-test.yml
app/: drone_projector_GAP9.onnx  drone_regressor_GAP9.onnx  drone_tcn_GAP9.onnx  drone_vfe_GAP9.onnx
docker/: Dockerfile  Dockerfile.match
docker/pulp_open/: Dockerfile
docs/dev/: apis.md  cost_model.md  memory.md  pattern_example.py
examples/: decoder_model.onnx  decoder_model_relay_ir.relay  dscnn-kws.onnx  integerized_conv.onnx  maupiti_cnn.onnx  maupiti_cnn_fixed.onnx  mobilenetV1-imagenet-m0-25-in-3-128-128.onnx  mobilenetV1-imagenet-m0-25-in-3-64-64.onnx  params_quant_conv.txt  quant_conv.relay  temponet_ht.onnx  timeppg_large.onnx  timeppg_small.onnx  tinygpt.relay
examples/targets/carfield/config/: CMakeLists.txt  Makefile  elf2payload.py  link.ld  link_pulpd.ld  link_spatz.ld  tvm_runtime.c  tvm_runtime.h
match/: __init__.py  api.py  main.py  relay_conv2d.py  relay_models.py  run.py
match/codegen/: __init__.py  codegen.py  dead_code_codegen.py  layer_data.py  template_data_generator.py  template_engine.py  template_writer.py  temporal_mapping_generator.py  workload_parser.py
match/compile/: __init__.py  c_aot.py  c_graph.py  compiler.py
match/cost_model/: zigzag.py
match/dim/: dim.py
match/matcha/: node.py  (+10 more)
match_maxwell/: .gitignore  maxwell.c  maxwell.py
maupiti/: __init__.py  maupiti.py  patterns.py  transform.py
relax/: gpt_llama.py  test.py
src/: .gitignore  __init__.py  api.py  main.py  relay_conv2d.py  utils.py
test/: .gitignore  README_ODL.md  convfp32_bench.py  floats.py  microbench.py  mini.py  mlperf_odl.sh  networks.py  node_config.json  pulp_open_ci.py  quants.py  test.py  test_odl.py  utils.py
(+667 files in other folders)
