[project]
name = "match"
version = "0.0.1"
authors = [
  { name="Mohamed Amine Hamdi", email="mohamed.hamdi@polito.it" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache License :: 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/eml-eda/match"